--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5050",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "convert": "convert -monitor ./photos/*.* -set filename:base \"%[basename]\" -resize 2000x2000\\> ./public/photos/%[filename:base].jpg"
   },
   "dependencies": {
     "vue": "^3.2.31",
     "vue-i18n": "^9.1.9",
     "vue-meta": "^3.0.0-alpha.2",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue3-lazyload": "^0.2.5-beta"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
